--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ REPOSITORY_DOCKER_URL=ghcr.io/nasa-ammos
 # choose a specific Aerie version
 DOCKER_TAG=v3.2.0
 
-GITHUB_USER=
-GITHUB_TOKEN=
+GITHUB_USER=GabrielleLoop
+GITHUB_TOKEN=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
 
 HASURA_GRAPHQL_ADMIN_SECRET=aerie
 HASURA_GRAPHQL_JWT_SECRET='{ "type": "HS256", "key": "oursupersecretsupersecurekey1234567890" }'
