--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REPOSITORY_DOCKER_URL=ghcr.io/nasa-ammos
 DOCKER_TAG=v3.2.0
 
 GITHUB_USER=GabrielleLoop
-GITHUB_TOKEN=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
+GITHUB_TOKEN=secret.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
 
 HASURA_GRAPHQL_ADMIN_SECRET=aerie
 HASURA_GRAPHQL_JWT_SECRET='{ "type": "HS256", "key": "oursupersecretsupersecurekey1234567890" }'
